first working test

--- a/test/dune
+++ b/test/dune
@@ -1,2 +1,6 @@
-(test
- (name test_TinySAT))
+(library
+ (name test_TinySAT)
+ (inline_tests)
+ (preprocess (pps ppx_inline_test))
+ (libraries Algs_test)
+)
