--- a/test/algs_test/dune
+++ b/test/algs_test/dune
@@ -2,5 +2,5 @@
  (name Algs_test)
  (libraries Algs Lib)
  (preprocess (pps ppx_inline_test))
- (inline_tests (deps (glob_files ../sat_cases/*)))
+ (inline_tests (deps (glob_files ../test_cases/sat/*) (glob_files ../test_cases/unsat/*)))
 )
